# mlready

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
mlready/: cleaner.py  eda.py
quickprep/: __init__.py  eda.py
